# DocuMint

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/documint/: __init__.py  __main__.py  cli.py  config.py  core.py  utils.py
tests/: test_core.py
